# ShoppingGPT

./: README.md  app.py  pyproject.toml
data/: policy.txt  products.csv  products.db  raw_data.txt
data/datastore/: index.faiss  index.pkl
scripts/: init_products_db.py  load_products_csv.py
shoppinggpt/: agent.py  config.py
shoppinggpt/router/: lib_semantic_router.py
shoppinggpt/tool/: product_search.py
static/: style.css
templates/: index.html
