[project]
name = "shoppinggpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "flask>=3.1.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-deepseek>=0.1.4",
    "semantic-router>=0.1.11",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
